<resources>
    <string name="app_name">GithubUser</string>
    <string name="repository">Repository</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="tab1">Followers</string>
    <string name="tab2">Following</string>
    <string name="github_user">Github User</string>
    <string name="logo_github">logo-github</string>
    <string name="submission_2">Submission 2</string>
    <string name="favorite">Favorite</string>
    <string name="title_favorite">Favorite User</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="dark_theme">Dark Theme</string>
</resources>